--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "metalsmith-textile",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Textile support for Metalsmith",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "gulp",
+    "test": "gulp && mocha"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AtlasJan/metalsmith-textile.git"
-  },
+  "repository": "git+https://github.com/AtlasJan/metalsmith-textile.git",
   "keywords": [
     "metalsmith",
     "textile-lang",
@@ -23,11 +21,21 @@
   "homepage": "https://github.com/AtlasJan/metalsmith-textile#readme",
   "dependencies": {
     "debug": "^4.1.0",
+    "metalsmith-plugin-kit": "^1.0.1",
     "textile": "0.0.1"
   },
   "devDependencies": {
-    "grunt": "^1.0.4",
-    "grunt-livescript": "^0.6.0",
+    "assert-dir-equal": "^1.1.0",
+    "delete": "^1.1.0",
+    "eslint": "^5.16.0",
+    "gulp": "^4.0.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-livescript": "^3.0.1",
+    "gulp-rename": "^1.4.0",
+    "livescript": "^1.6.0",
+    "local-package-publisher": "^1.0.3",
+    "metalsmith": "^2.3.0",
+    "mocha": "^6.1.4",
     "npx": "^10.2.0"
   }
 }
