--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepare": "gulp",
-    "test": "gulp && mocha"
+    "test": "test ! -e index.js && gulp && mocha || mocha"
   },
   "repository": "git+https://github.com/AtlasJan/metalsmith-textile.git",
   "keywords": [
@@ -22,13 +22,14 @@
   "dependencies": {
     "debug": "^4.1.0",
     "metalsmith-plugin-kit": "^1.0.1",
-    "textile": "0.0.1"
+    "textile-js": "^2.0.4"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.1.0",
     "delete": "^1.1.0",
     "eslint": "^5.16.0",
     "gulp": "^4.0.1",
+    "gulp-cli": "^2.2.0",
     "gulp-eslint": "^5.0.0",
     "gulp-livescript": "^3.0.1",
     "gulp-rename": "^1.4.0",
