--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metalsmith-textile",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Textile support for Metalsmith",
   "main": "index.js",
   "scripts": {
@@ -34,9 +34,9 @@
     "gulp-livescript": "^3.0.1",
     "gulp-rename": "^1.4.0",
     "livescript": "^1.6.0",
-    "local-package-publisher": "^1.0.3",
-    "metalsmith": "^2.3.0",
-    "mocha": "^6.1.4",
-    "npx": "^10.2.0"
+    "mocha": "^6.1.4"
+  },
+  "peerDependencies": {
+    "metalsmith": "^2.3.0"
   }
 }
